gcc/testsuite/gdc.test/runnable/imports/test38a.d
module imports.test38a;

int bar(int i)
{
    return i * i;
}
